--- a/index.html
+++ b/index.html
@@ -6,10 +6,57 @@
   <meta name="keywords" content="Perfusion Technologist">
   <meta name="author" content="Mohammed Jaseem">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Np Sreerag | Perfusion Technologist</title>
+  <title>MDCRC | Social Medias</title>
 
   <! –– Style stylesheet link ––>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <style>
+  
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 10px
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+.fa-google {
+  background: #dd4b39;
+  color: white;
+}
+
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
+}
+
+.fa-youtube {
+  background: #bb0000;
+  color: white;
+}
+
+.fa-instagram {
+  background: #125688;
+  color: white;
+}
+  </style>
 </head>
 
 <body>
@@ -17,24 +64,18 @@
         <div class="canvas">
             <div class="banner">
                 <img class="bannerimg" src="img/bck.jpg" alt="dp">
-                <img class="dp" src="img/dp.png" alt="dp">
+                <img class="dp" src="img/dp.jpg" alt="dp">
             </div>
             <div class="insta-name">
-                <h2>Np Sreerag<span>Perfusion Technologist</span></h2>
+                <h2>Social pages <span>Malabar Dental & Research Center</span></h2>
               </div>
-              <div class="insta-followers-wrap">
-                <div class="insta-follow">
-                  <h2>123<span>Followers</span></h2>
-                </div>
-                <div class="insta-follow">
-                  <h2>23<span>Following</span></h2>
-                </div>
-              </div>
-              <div class="insta-button">
-                <a href="https://www.linkedin.com/in/sreerag-np-181952200/">LinkedIn</a>
-              </div>
+              <br>
+              <a href="https://www.facebook.com/malabarAcademicCity " class="fa fa-facebook"></a>
+              <a href="https://www.linkedin.com/school/malabar-dental-college-&-research-center/" class="fa fa-linkedin"></a>
+              <a href="https://www.instagram.com/malabar_dental_college/" class="fa fa-instagram"></a>
+              <a href="https://g.co/kgs/RnRwx6" class="fa fa-google"></a>
               <div class="insta-bio">
-                <p>Support the patients with external hearts with the help of machines that mimic the typical human heart.</p>
+                <p>Show your support by following our pages.</p>
         </div>
     </div>
 </body>
