--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               <a href="https://www.facebook.com/malabarAcademicCity " class="fa fa-facebook"></a>
               <a href="https://www.linkedin.com/school/malabar-dental-college-&-research-center/" class="fa fa-linkedin"></a>
               <a href="https://www.instagram.com/malabar_dental_college/" class="fa fa-instagram"></a>
-              <a href="https://g.co/kgs/RnRwx6" class="fa fa-google"></a>
+              <a href="https://g.page/r/CS4qi1PBHXm4EAg/review" class="fa fa-google"></a>
               <div class="insta-bio">
                 <p>Show your support by following our pages.</p>
         </div>
