--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="Perfusion Technologist Graduate">
-  <meta name="keywords" content="Perfusion Technologist">
+  <meta name="description" content="Socail media pages of malabar dental college & research center">
+  <meta name="keywords" content="Social media Malabar dental college">
   <meta name="author" content="Mohammed Jaseem">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MDCRC | Social Medias</title>
