--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="Socail media pages of malabar dental college & research center">
+  <meta name="description" content="Social media pages of malabar dental college & research center">
   <meta name="keywords" content="Social media Malabar dental college">
   <meta name="author" content="Mohammed Jaseem">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
